--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 appnope==0.1.0
-awscli==1.15.13
+awscli==1.16.140
 backcall==0.1.0
 bleach==2.1.3
-botocore==1.10.13
+botocore==1.12.130
 colorama==0.3.7
 decorator==4.3.0
 docutils==0.14
@@ -24,24 +24,25 @@ MarkupSafe==1.0
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.4.1
+notebook==5.7.8
 numpy==1.14.3
 pandas==0.22.0
 pandocfilters==1.4.2
 parso==0.2.0
 pexpect==4.5.0
 pickleshare==0.7.4
+prometheus-client==0.6.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 pyasn1==0.4.2
 Pygments==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
-PyYAML==3.12
+PyYAML==3.13
 pyzmq==17.0.0
 qtconsole==4.3.1
 rsa==3.4.2
-s3transfer==0.1.13
+s3transfer==0.2.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
@@ -49,6 +50,7 @@ terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.2
 traitlets==4.3.2
+urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.2.1
